feat: add self-service student experience
