# backend/internal/handler/router.go
@@ -50,6 +50,9 @@ func NewRouter(dependencies Dependencies) http.Handler {
 			protected.Get("/exercises/{id}", getExercise(dependencies.Exercises))
 			protected.Get("/programs", listPrograms(dependencies.Programs))
 			protected.Get("/programs/{id}", getProgram(dependencies.Programs))
+			protected.Post("/programs/{id}/start", startProgram(dependencies.Programs))
+			protected.Get("/super-admin/users", superAdminUsers(dependencies.Auth.Users))
+			protected.Put("/super-admin/users/{id}/role", superAdminUserRole(dependencies.Auth.Users))
 			protected.Get("/workouts", listWorkouts(dependencies.Workouts))
 			protected.Get("/workouts/today", today(dependencies.Workouts))
 			protected.Get("/workouts/{id}", getWorkout(dependencies.Workouts))
